--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@sparticuz/chromium": "^138.0.2",
     "@tabler/icons-react": "^3.22.0",
     "@tanstack/react-query": "^5.59.19",
     "@xyflow/react": "^12.3.4",
@@ -60,6 +61,7 @@
     "nextjs-toploader": "^3.7.15",
     "openai": "^4.72.0",
     "puppeteer": "^23.7.1",
+    "puppeteer-core": "^24.15.0",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
